Fix highlights border-right on mobile

--- a/app/assets/stylesheets/application/modules/atoms/_highlights.scss
+++ b/app/assets/stylesheets/application/modules/atoms/_highlights.scss
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px 0;
-  width: 125px;
+  width: 150px;
 
   @media #{$from-medium} {
     flex-direction: row;
